# mcu

./: .gitignore  CMakeLists.txt  get_adc.py  get_telemetry.py  main.c
adc-task/: adc-task.c  adc-task.h
led-task/: led-task.c  led-task.h
protocol-task/: protocol-task.c  protocol-task.h
stdio-task/: stdio-task.c  stdio-task.h
